--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,18 +3,19 @@ version: "3.9"
 services:
   web:
     build: ./webapp
-    expose:
-      - "8080"    # internal only, no host binding
-    depends_on:
-      - db
+    ports:
+      - "8080:8080"
     environment:
       - DB_HOST=db
       - DB_USER=root
       - DB_PASSWORD=rootpassword
       - DB_NAME=myappdb
-    restart: always
+    depends_on:
+      - db
     deploy:
-      replicas: 2
+      replicas: 2   # scale web app
+      restart_policy:
+        condition: always
 
   db:
     image: mysql:8.0
@@ -28,3 +29,4 @@ services:
 
 volumes:
   db_data:
+
