--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -2,12 +2,13 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+COPY requirements.txt .
 
-COPY app.py app.py
+# Install dependencies (no pip upgrade to avoid thread issues)
+RUN pip install --no-cache-dir --progress-bar=off -r requirements.txt
 
-EXPOSE 8080
+COPY . .
 
 CMD ["python", "app.py"]
+
 
