--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,13 @@ services:
       replicas: 2
 
   db:
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: myappdb
-    volumes:
-      - db_data:/var/lib/mysql
+  image: mysql:8.0
+  environment:
+    MYSQL_ROOT_PASSWORD: rootpassword
+    MYSQL_DATABASE: myappdb
+  volumes:
+    - db_data:/var/lib/mysql
+    - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
 
   nginx:
     image: nginx:alpine
