--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,17 @@ services:
       - db
 
   db:
-    image: mysql:8.0
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: myappdb
-    volumes:
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  image: mysql:8.0
+  restart: always
+  environment:
+    MYSQL_ROOT_PASSWORD: rootpassword
+    MYSQL_DATABASE: myappdb
+  volumes:
+    - db_data:/var/lib/mysql
+    - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+  ports:
+    - "3306:3306"
+
 
   nginx:
     image: nginx:alpine
