--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,44 @@
 version: "3.9"
 
 services:
-  web:
-    build: ./webapp
-    expose:
-      - "8080"   # internal port for Flask
-    environment:
-      - DB_HOST=db
-      - DB_USER=root
-      - DB_PASSWORD=rootpassword
-      - DB_NAME=myappdb
-    depends_on:
-      - db
-    deploy:
-      replicas: 2
-
   db:
     image: mysql:8.0
+    container_name: dockercompose_db_1
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: myappdb
-    volumes:
-      - db_data:/var/lib/mysql
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql:ro
+      MYSQL_ROOT_PASSWORD: rootpassword   # required
+      MYSQL_DATABASE: myappdb             # auto-create DB
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
     ports:
       - "3306:3306"
+    volumes:
+      - db_data:/var/lib/mysql
+
+  web:
+    build: ./webapp
+    container_name: dockercompose_web
+    environment:
+      DB_HOST: db
+      DB_USER: myuser
+      DB_PASSWORD: mypassword
+      DB_NAME: myappdb
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+    scale: 2
 
   nginx:
     image: nginx:alpine
     ports:
       - "5000:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - web
 
 volumes:
   db_data:
+
 
 
 
