--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,12 @@ version: "3.9"
 services:
   db:
     image: mysql:8.0
-    container_name: dockercompose_db_1
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword   # required
-      MYSQL_DATABASE: myappdb             # auto-create DB
-      MYSQL_USER: myuser
-      MYSQL_PASSWORD: mypassword
+      MYSQL_ROOT_PASSWORD: rootpassword   # REQUIRED
+      MYSQL_DATABASE: myappdb
+      MYSQL_USER: appuser
+      MYSQL_PASSWORD: appuserpassword
     ports:
       - "3306:3306"
     volumes:
@@ -17,27 +16,27 @@ services:
 
   web:
     build: ./webapp
-    container_name: dockercompose_web
-    environment:
-      DB_HOST: db
-      DB_USER: myuser
-      DB_PASSWORD: mypassword
-      DB_NAME: myappdb
+    command: python app.py
     depends_on:
       - db
-    ports:
-      - "8080:8080"
-    scale: 2
+    environment:
+      - DB_HOST=db
+      - DB_USER=appuser
+      - DB_PASSWORD=appuserpassword
+      - DB_NAME=myappdb
 
   nginx:
     image: nginx:alpine
     ports:
       - "5000:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - web
 
 volumes:
   db_data:
+
 
 
 
