--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,39 +3,43 @@ version: "3.9"
 services:
   db:
     image: mysql:8.0
+    container_name: myapp_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword   # REQUIRED
+      MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: myappdb
-      MYSQL_USER: appuser
-      MYSQL_PASSWORD: appuserpassword
-    ports:
-      - "3306:3306"
+      MYSQL_USER: myuser
+      MYSQL_PASSWORD: mypassword
     volumes:
       - db_data:/var/lib/mysql
+    networks:
+      - myapp-network
 
   web:
-    build: ./webapp
-    command: python app.py
+    build: ./web
+    container_name: myapp_web
+    restart: always
     depends_on:
       - db
-    environment:
-      - DB_HOST=db
-      - DB_USER=appuser
-      - DB_PASSWORD=appuserpassword
-      - DB_NAME=myappdb
-
-  nginx:
-    image: nginx:alpine
     ports:
-      - "5000:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - web
+      - "8080:8080"
+    environment:
+      DB_HOST: db
+      DB_USER: myuser
+      DB_PASSWORD: mypassword
+      DB_NAME: myappdb
+    networks:
+      - myapp-network
+    deploy:
+      replicas: 2  # Optional (use Docker Swarm for this)
 
 volumes:
   db_data:
+
+networks:
+  myapp-network:
+
+
 
 
 
